Corrected to Java 8 project (with apologies!)